--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,14 @@
   color: #61dafb;
 }
 
+.navbar-bg {
+  background-color:#ff9f43;
+}
+
+.img-resize{
+  object-fit: cover;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +43,26 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.carousel-img:after{
+  content:'';
+  position:absolute;
+  left:0; 
+  top:0;
+  width:100%; 
+  height:100%;
+  display:inline-block;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%,rgba(0, 0, 0, 0.5) 100%);
+}
+.img-gradient img{
+  display:block;
+}
+
+.text-color{
+  color:rgb(0, 0, 0)
+}
+
+.bg-login{
+  background-color: rgb(240, 236, 230);
 }
